# DNScurse

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  integration-tests.yml  lint.yml  test.yml  unit-tests.yml
dnscurse/: __init__.py  __main__.py  _cli.py  cli.py  models.py  resolver.py  wire.py
dnscurse/ui/output/: __init__.py  base.py  compact.py  dig.py  exceptions.py  helpers.py  pprint.py  short.py
docs/: ARCHITECTURE.md  demo.cast  dnscurse.1.md  dnscurse.1.txt  dnscurse.3.md  dnscurse.3.txt
man/: dnscurse.1  dnscurse.3
tests/: conftest.py  test_cli.py  test_models.py  test_resolver.py  test_wire.py
