[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dnscurse"
version = "0.2.0"
description = "DNS recursor debug tool — walk recursion steps"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
dnscurse = "dnscurse.cli:main"
dnscurse-cli = "dnscurse.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -s"
