[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dnscurse"
version = "0.2.0"
description = "DNS recursor debug tool — walk recursion steps"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-pretty>=1.2",
    "ruff>=0.4",
]

[project.scripts]
dnscurse = "dnscurse._cli:main"

[tool.setuptools.packages.find]
include = ["dnscurse*"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/dnscurse.1"]
"share/man/man3" = ["man/dnscurse.3"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -s"
markers = [
    "network: marks tests that require network access",
    "cli: marks tests that exercise the CLI entry point",
]
